src/css/App.css
html, body, div#root, .router-div {
    height: 100%;
}

body {
	margin: 0;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 0.875em;
	color: rgb(255, 253, 248);
    background: url('/img/bg.png') no-repeat center center fixed; 
    background-color: black;
}

a {
  color: gold;
  text-decoration: none;
}

ul {
    margin: 0;
    padding: 0;
}

.footer-copyright {
    padding-left: 1em;
    display: table-cell;
    vertical-align: middle;
    text-align: left;
    padding-right: 1.75em;
}


/* Sticky Header */
header {
    margin: auto;
    position: absolute;
    left: 0; right: 0;
}

footer {
	margin: 0 auto 0 auto;
}

header, footer {
    display: table;
    background-color: #333;
	font-size: .9em;
	z-index: 10;
    width: 800px;
}

header img {
    max-height: 35px;
	vertical-align: middle;
}

header h2 {
	display: inline-block;
	vertical-align: middle;
	color: white;
	margin: 0 .6em;
}

.nav, .footer-links, .nav-profile {
    display: table-cell;
}

.nav-profile {
    display: table;
    float: right;
    line-height: 35px;
}

/* Avatar at right */
.nav-profile .player-column li {
    float: right;
}

.nav-profile a:first-child {
    padding: 0;
}


header li, footer li {
	float: left;
	display: table;
    height: 35px;
}

.title, .footer-links li {
	float: left;
}

.footer-links .logout {
    float: right;
}

.footer-links .logout a {
    padding-right: 1em; 
}

header li a, footer li a {
	display: table-cell;
    vertical-align: middle;
    color: gold;
    padding: 0 0.6em 0 0.6em;
}


header a:hover, footer a:hover, .nav-selected, .title:hover {
	color: rgb(255, 253, 234);
	background: #272727;
}

main {    
    min-height: calc(100% - 2.75em - 35px);
    min-height: -o-calc(100% - 2.75em - 35px);
    min-height: -moz-calc(100% - 2.75em - 35px);
    min-height: -webkit-calc(100% - 2.75em - 35px);
    padding: 2.75em 0 35px 0; 
	margin: 0 auto -35px auto;
	width: 800px;
    text-align: center;
    text-align: -o-center;
    text-align: -moz-center;
    text-align: -webkit-center;
	background: rgba(20, 20, 20, .8);
}

main:after {
    content: '';
    display: block;
}

main h1 {
  font-size: 1.9em;
}

main h2 {
  font-size: 1.5em;
} 

table {
	background: rgba(20, 20, 20, .8);
    text-align: center;
	margin-top: 1em;
	width: 800px;
}

tbody tr:nth-child(odd) {
	background: rgba(255, 255, 255, .05)
}

tbody tr:hover {
	background: rgba(255, 255, 255, .1)
}










td img {
	vertical-align: middle;
    max-height: 40px;
}

td {
	padding: .4em .8em;
}

.player-column {
    text-align: left;
}

.player-column li {
    padding-left: 0.5em;
    display: inline-block;
}


.steam-icon {
    height: 1.5em;
	transition: filter .3s ease;
}

.steam-icon:hover {
	filter: brightness(1.5);
}

.th-steam-icon {
	width: 3em;
	padding: 0;
}

.td-level-name {
    text-align: left;
}






.Jade {
    color: rgb(180, 255, 136);
}

.Sand {
    color: rgb(255, 233, 136);
}

.Metal {
    color: rgb(169, 224, 255);
}

.Crystal {
    color: rgb(255, 136, 255);
}

.passed-mastery {
    color: gold;
}







/* Footer at far bottom */
.content:after {
	height: 35px; 
}

.content:after {
    content: '';
    display: block;
}







/* Tooltip container */
.tooltip {
    position: relative;
    display: inline-block;
}

/* Tooltip text */
.tooltip .tooltip-text {
    visibility: hidden;
    background-color: rgba(0, 0, 0);
    color: #fff;
    text-align: center;
    border-radius: 0.125em;
    white-space:nowrap;
	
	/* Position */
    position: absolute;
	z-index: 1;
    bottom: 100%;
	margin-bottom: 0.25em;
	padding: 0em 0em;
    left: 50%;
    max-width:none;
    transform: translateX(-50%);
}

.tooltip:hover .tooltip-text {
    visibility: visible;
}








button {
    display: inline-block;
	border: none;
	width: 6em;
	margin-right: 0.4em;
    padding: 0.25em 1em;
    text-decoration: none;
    background: rgb(92, 92, 92);
    color: #ffffff;
    font-family: sans-serif;
    font-size: 1em;
    cursor: pointer;
    text-align: center;
    transition: background 60ms ease-in-out, 
                transform 32ms ease;
    -webkit-appearance: none;
	-moz-appearance: none;
	
	border-radius: 4px;
}

button:hover, button:focus {
    background: rgb(73, 73, 73);
}

button:disabled {
	background: rgb(59, 59, 59);
	color: #8a8a8a;
}

button:focus {
    outline: 1px solid #fff;
    outline-offset: -4px;
}

button:active {
    transform: scale(0.99);
}







input {
	border:1px solid #d1c7ac;
	width: 12em;
	height: 1.35em;
	font-size: 0.95em;
	color:#333333;
	margin-right:0.4em;
	font-family:tahoma, arial, sans-serif;
}












/* Loading anim */
.spinner {
    margin: 100px auto;
    height: 5em;
  }
  
  .spinner > div {
    background-color: #fff;
    height: 100%;
    width: 0.3em;
    margin-left: 0.4em;
    display: inline-block;
    
    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
    animation: sk-stretchdelay 1.2s infinite ease-in-out;
  }
  
  .spinner .rect2 {
    -webkit-animation-delay: -1.1s;
    animation-delay: -1.1s;
  }
  
  .spinner .rect3 {
    -webkit-animation-delay: -1.0s;
    animation-delay: -1.0s;
  }
  
  .spinner .rect4 {
    -webkit-animation-delay: -0.9s;
    animation-delay: -0.9s;
  }
  
  .spinner .rect5 {
    -webkit-animation-delay: -0.8s;
    animation-delay: -0.8s;
  }
  
  @-webkit-keyframes sk-stretchdelay {
    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
    20% { -webkit-transform: scaleY(1.0) }
  }
  
  @keyframes sk-stretchdelay {
    0%, 40%, 100% { transform: scaleY(0.4); -webkit-transform: scaleY(0.4); }  
    20% { transform: scaleY(1.0); -webkit-transform: scaleY(1.0); }
  }

